# sandbox

./: .editorconfig  .gitignore  .trivyignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.controller  Dockerfile.facade  Dockerfile.forkd  Dockerfile.husk-stub  Dockerfile.kvm-device-plugin  Makefile  README.md  ROADMAP.md  SECURITY.md  TRADEMARKS.md  go.mod  go.sum  greptile.json  release-please-config.json
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml
bench/: README.md  husk-activate-latency.sh  sleep-consolidation.sh
deploy/: imagepullsecret.yaml  kustomization.yaml
docs/: ci-runner.md  cli.md  compliance-claims.md  conditions.md  encryption.md  facade-conformance.md  failure-gc.md  fork-correctness.md  husk-pods.md  kernel-cve.md  mcp.md  metering.md  networking.md  observability.md  open-core.md  scheduling.md  security-operations.md  security-review-policy.md  snapshot-distribution.md  snapshot-format.md  supply-chain.md  templates.md  threat-model.md  volumes.md  workspaces.md
examples/: claim.yaml  fork.yaml  multi-workspace.yaml  python-pool.yaml
hack/: e2e-test.sh  kind-config.yaml  kind-setup.sh
sdk/python/: README.md  pyproject.toml
sdk/python/agent_run/: client.py  direct.py  sandbox.py
sdk/python/mitos/: __init__.py  _envelope.py  aio.py  client.py  direct.py  errors.py  pty.py  sandbox.py  types.py
sdk/python/tests/: test_async.py  test_default_pool.py  test_direct.py  test_errors.py  test_from_name.py  test_pty.py  test_run_code.py  test_sandbox.py  test_stream.py  test_types.py  test_wait_ready.py
(+492 files in other folders)
